# x16-emulator

./: CMakeLists.txt
src/: CMakeLists.txt  audio.c  audio.h  i2c.c  ieee.c  keyboard.c  main.c  memory.c  ps2.c  timing.c  vera_psg.c
src/cpu/: CMakeLists.txt  buildtables.py  fake6502.c
